--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.3",
     "formik": "^2.4.6",
+    "nanoid": "^5.0.7",
     "react": "^18.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
